# rik

./: CHANGELOG.md  Cargo.toml  MOTD.txt  README.md  TODO.md  post_work.txt  pre_work.txt  safety.txt
.github/workflows/: ci.yml
src/: cleanup.rs  complete.rs  config.rs  helpers.rs  keyboard.rs  main.rs  markers.rs  personality.rs  raii.rs  state.rs
src/tools/: complete_marker.rs  dynamic_command.rs  edit_file.rs  list_files.rs  mod.rs  moodify.rs  personality.rs  read_file.rs  send_message.rs  write_file.rs
