[package]
name = "rik"
version = "0.1.1"
edition = "2024"
rust-version = "1.93"
description = "Find markers in your files and replace them with LLM-generated content"
readme = "README.md"
license = "MIT"
repository = "https://github.com/exlee/rik"
keywords = ["ai", "agent", "code-generation", "marker", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rik"
path = "src/main.rs"

[dependencies]
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rig = { version = "0.37.0", features = ["derive"] }
futures = "0.3"
glob = "0.3"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
dirs = "6"
toml = "0.8"
tempfile = "3"
notify = "8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10.1"
ctrlc = "3.5.2"

[dev-dependencies]
tempfile = "3"
